--- a/src/styles/frames/_news.scss
+++ b/src/styles/frames/_news.scss
@@ -26,7 +26,7 @@
     border: 0;
 
     @media screen and (max-width: 767px) {
-      &:nth-child(n + 4) {
+      .frame-news__content:nth-child(n + 4) {
         display: flex;
       }
     }
@@ -51,24 +51,6 @@
     &.frame-news__content--featured {
       grid-row: 1 / 3;
       font-weight: 700;
-
-      @media screen and (max-width: 767px) {
-        grid-column: 1 / 3;
-        grid-row: auto;
-
-        min-height: 12.25rem;
-        padding-left: 40%;
-      }
-
-      @media screen and (max-width: 767px) {
-        grid-column: auto;
-        min-height: 11.25rem;
-      }
-
-      @media screen and (max-width: 479px) {
-        min-height: 7rem;
-        padding-left: 7rem;
-      }
     }
 
     &:hover .frame-news__image {
@@ -118,21 +100,6 @@
     border-radius: calc(var(--radius-frame) / 1.5);
 
     transition: filter 0.25s;
-
-    @media screen and (max-width: 767px) {
-      position: absolute;
-      top: var(--space-outer);
-      left: var(--space-outer);
-
-      width: calc(40% - var(--space-outer) * 2);
-      height: calc(100% - var(--space-outer) * 2);
-
-      padding-top: 0;
-    }
-
-    @media screen and (max-width: 479px) {
-      width: calc(7rem - var(--space-outer) * 2);
-    }
   }
 
   .frame-news__image-thumbnail {
